# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This BUILD.gn file is specific to the standalone project. Do not
# copy this downstream.

import("//testing/test.gni")

static_library("encoding") {
  sources = [
    "encoding/encoding.cc",
  ]
}

static_library("bindings") {
  sources = [
    "bindings/bindings.cc",
  ]
}

# In this (upstream) standalone package, we declare
# {encoding,bindings}_test, and a few minimal files in testing
# to make it look like Chromium's testing package. However, in
# Chromium, we run these tests as part of the content_unittests,
# declared in content/test/BUILD.gn.

test("encoding_test") {
  sources = [
    "encoding/encoding_test.cc",
    "encoding/encoding_test_helper.h",
  ]
  include_dirs = [ "." ]
  deps = [
    ":encoding",
    "//base",
    "//testing/gmock:gmock",
    "//testing/gtest:gtest",
    "//testing/gtest:gtest_main",
  ]
}

test("bindings_test") {
  sources = [
    "bindings/bindings_test.cc",
    "bindings/bindings_test_helper.h",
  ]
  include_dirs = [ "." ]
  deps = [
    ":bindings",
    "//base",
    "//testing/gmock:gmock",
    "//testing/gtest:gtest",
    "//testing/gtest:gtest_main",
  ]
}

executable("transcode") {
  sources = [
    "encoding/transcode.cc",
  ]
  deps = [
    ":encoding",
  ]
}
