# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This BUILD.gn file is specific to the standalone project. Do not
# copy this downstream.

import("//testing/test.gni")

static_library("crdtp") {
  sources = [
    "crdtp/cbor.cc",
    "crdtp/cbor.h",
    "crdtp/export.h",
    "crdtp/glue.h",
    "crdtp/json.cc",
    "crdtp/json.h",
    "crdtp/json_platform.h",
    "crdtp/status.cc",
    "crdtp/status.h",
  ]
}

# In this (upstream) standalone package, we declare
# crdtp_test, and a few minimal files in testing
# to make it look like Chromium's testing package. However, in
# Chromium, we run these tests as part of the content_unittests,
# declared in content/test/BUILD.gn.

test("crdtp_test") {
  sources = [
    "crdtp/cbor_test.cc",
    "crdtp/glue_test.cc",
    "crdtp/json_test.cc",
    "crdtp/span_test.cc",
    "crdtp/status_test.cc",
    "crdtp/test_platform.cc",
  ]
  include_dirs = [ "." ]
  deps = [
    ":crdtp",
    "//base",
    "//testing/gmock:gmock",
    "//testing/gtest:gtest",
    "//testing/gtest:gtest_main",
  ]
}

executable("transcode") {
  sources = [
    "crdtp/transcode.cc",
  ]
  deps = [
    ":crdtp",
  ]
}
